# paramgraph

./: .prettierignore  Makefile  README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yaml  nextjs.yaml  nextjs.yml
cdk/: package.json
deployments/: cdk.json  jest.config.js  package.json  tsconfig.json
deployments/lib/: paramgraph.js  paramgraph.ts
deployments/scripts/: deploy.mjs
deployments/test/: lib.test.ts
scripts/: build.mjs  setup.mjs
web/app/: next.config.js  package.json  tsconfig.json
web/app/__mocks__/: stats.ts
web/app/__tests__/: app.test.tsx
web/app/components/: Chart.js  Chart.tsx  DistBox.js  DistBox.tsx  DistDropdown.js  DistDropdown.tsx  DistInput.js  DistInput.tsx  Distribution.js  Dropdown.js  Footer.tsx  Input.js  NavBar.tsx  RangeInput.js  RangeInput.tsx  Spinner.js
web/app/pages/: _app.js  _app.tsx  _document.js  index.js  index.tsx  notices.js  notices.tsx
web/app/public/: notices-js.json  notices-rs.json
web/app/scripts/: license.mjs
web/app/src/: calculator.js  constants.js  distribution.js  distribution.ts  distributions.js  menu.ts  recoil.ts  types.ts  utils.ts
web/app/styles/: globals.css
web/stats/: .gitignore  Cargo.toml
web/stats/pkg/: package.json
web/stats/src/: lib.rs
