[package]
name = "stats"
version = "0.1.0"
authors = ["dr666m1 <skndr666m1@gmail.com>"]
edition = "2018"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# https://github.com/rust-random/getrandom/issues/208
getrandom = { version = "0.2", features = ["js"] }
itertools-num = "0.1"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.5"
statrs = "0.16"
wasm-bindgen = "0.2.63"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
